Finished home page for now

--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -20,15 +20,15 @@
         <meta property="og:image:secure_url" content="/assets/images/logo-small.png"/>
 
         <!--Favicons-->
-        <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png?v1">
-        <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/assets/svgs/dvlogo.svg">
+        <link rel="icon" type="image/png" sizes="32x32" href="/assets/svgs/dvlogo.svg">
+        <link rel="icon" type="image/png" sizes="16x16" href="/assets/svgs/dvlogo.svg">
         <link rel="manifest" href="/assets/favicons/site.webmanifest">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
 
         <!-- Preloads -->
-        <link rel="preload" as="image" href="/assets/svgs/logo-white.svg">
+        <link rel="preload" as="image" href="/assets/svgs/dvlogo.svg">
         <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-regular.woff2" crossorigin>
         <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-700.woff2" crossorigin>
 
@@ -39,8 +39,6 @@
 
         <!-- Sitewide Stylesheets and Scripts -->
         <link rel="stylesheet" href="/assets/css/root.css">
-        <link rel="stylesheet" href="/assets/css/dark.css">
-        <script defer src="/assets/js/dark.js"></script>
         <script defer src="/assets/js/nav.js"></script>
 
         {% block head %}{% endblock %}
