--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -1,23 +1,22 @@
 <!-- ============================================ -->
-<!--             Final Call to Action             -->
+<!--                    CTA                       -->
 <!-- ============================================ -->
 
-<section id="cta">
-    <div class="container">
-        <h2 class="title">
-            Get It Done
-            <br/>
-            With Us Today
-        </h2>
-        <p>
-            Say something catchy, informative, and encouraging to click the button to go to the contact page. I like to add these to the bottom of all pages.
-        </p>
-        <a href="/contact" class="cs-button-solid">Get an Estimate Now</a>
+<section id="cta-403">
+    <div class="cs-container">
+        <div class="cs-content">
+            <h2 class="cs-title">Ready to take your business to the next level?</h2>
+            <p class="cs-text">
+                At DV Web Development websites are our passion, in an ever advancing world of technology we are determined to mkae your site cutting edge - we want you to be successful, so we can be successful.
+            </p>
+            <a href="" class="cs-button-solid">Get Started</a>
+        </div>
     </div>
-    <picture>
-        <source media="(max-width: 600px)" srcset="/assets/images/cabinets2-m.jpg">
-        <source media="(min-width: 601px)" srcset="/assets/images/cabinets2.jpg">
-        <img aria-hidden="true" decoding="async" src="/assets/images/cabinets2.jpg" alt="kitchen cabinets" loading="lazy" width="2500" height="1667">
+    <!--Background Image-->
+    <picture class="cs-background">
+        <source media="(max-width: 600px)" src="assets/images/laptopwgraphs.jpg">
+        <source media="(min-width: 601px)" src="assets/images/laptopwgraphs.jpg">
+        <img loading="lazy" decoding="async" src="assets/images/laptopwgraphs.jpg" alt="cleaner" width="1920" height="660" aria-hidden="true">
     </picture>
-
 </section>
+                                
