--- a/src/assets/css/local.css
+++ b/src/assets/css/local.css
@@ -220,10 +220,10 @@
       content: "";
       width: 100%;
       height: 100%;
-      background: #1a1a1a;
-      opacity: 0.3;
+      /* background: #1a1a1a;
+      opacity: 0.3;*/
       position: absolute;
-      display: block;
+      display: block; 
       top: 0;
       left: 0;
       z-index: 1;
@@ -360,4 +360,354 @@
   left: -20%;
 }
 
-                                
+
+/*-- -------------------------- -->
+<---   Side By Side Reverse     -->
+<--- -------------------------- -*/
+
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+  #sbsr-76 {
+      padding: var(--sectionPadding);
+      /* clips the red box from causing overflow issues */
+      overflow: hidden;
+  }
+  #sbsr-76 .cs-container {
+      width: 100%;
+      /* changes to 1280px at tablet */
+      max-width: 34.375rem;
+      margin: auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      /* 48px - 64px */
+      gap: clamp(3rem, 6vw, 4rem);
+  }
+  #sbsr-76 .cs-content {
+      /* set text align to left if content needs to be left aligned */
+      text-align: left;
+      width: 100%;
+      max-width: 33.875rem;
+      margin-right: auto;
+      display: flex;
+      flex-direction: column;
+      /* centers content horizontally, set to flex-start to left align */
+      align-items: flex-start;
+  }
+
+  #sbsr-76 .cs-text {
+      margin-bottom: 1rem;
+  }
+  #sbsr-76 .cs-text:last-of-type {
+      margin-bottom: 2rem;
+  }
+  #sbsr-76 .cs-button-solid {
+      font-size: 1rem;
+      /* 46px - 56px */
+      line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+      text-decoration: none;
+      font-weight: 700;
+      text-align: center;
+      margin: 0;
+      color: #fff;
+      min-width: 9.375rem;
+      padding: 0 1.5rem;
+      background-color: var(--primary);
+      border-radius: 0.25rem;
+      display: inline-block;
+      position: relative;
+      z-index: 1;
+      /* prevents padding from adding to the width */
+      box-sizing: border-box;
+  }
+  #sbsr-76 .cs-button-solid:before {
+      content: "";
+      position: absolute;
+      height: 100%;
+      width: 0%;
+      background: #000;
+      opacity: 1;
+      top: 0;
+      left: 0;
+      z-index: -1;
+      border-radius: 0.25rem;
+      transition: width 0.3s;
+  }
+  #sbsr-76 .cs-button-solid:hover:before {
+      width: 100%;
+  }
+  #sbsr-76 .cs-wrapper {
+      width: 95%;
+      max-width: 34.375rem;
+      /* 28px - 80px */
+      /* pushes up and down by the same amount the decorative box overflows the wrapper */
+      margin: clamp(1.75em, 7.8vw, 5em) 0;
+      position: relative;
+      z-index: 1;
+  }
+  #sbsr-76 .cs-wrapper:before {
+      /* Red decorative box */
+      content: "";
+      /* make it huge so it covers everything on the left as it overflows */
+      width: 50em;
+      background: var(--primary);
+      opacity: 1;
+      border-radius: 1rem;
+      position: absolute;
+      display: block;
+      /* 28px - 80px */
+      /* wrapped in a calc function to get a negative clamp value */
+      top: calc(clamp(1.75em, 7.8vw, 5em) * -1);
+      bottom: calc(clamp(1.75em, 7.8vw, 5em) * -1);
+      left: 4.0625em;
+      z-index: -1;
+  }
+  #sbsr-76 .cs-picture {
+      width: 100%;
+      margin: 0;
+      /* width divided by height */
+      aspect-ratio: 0.93134328;
+      border-radius: 1rem;
+      display: block;
+      position: relative;
+      z-index: 1;
+  }
+  #sbsr-76 .cs-picture:before {
+      /* Top right box */
+      content: "";
+      width: 10rem;
+      /* 202px - 248px */
+      height: clamp(12.625rem, 25vw, 15.5rem);
+      background: #1a1a1a;
+      opacity: 1;
+      border-radius: 1rem;
+      position: absolute;
+      display: block;
+      /* 16px -20px */
+      /* wrapped in a calc function to get a negative clamp value */
+      top: calc(clamp(0.5rem, 2.09vw, 1.25rem) * -1);
+      right: calc(clamp(0.5rem, 2.09vw, 1.25rem) * -1);
+  }
+  #sbsr-76 .cs-picture:after {
+      /* Bottom left box */
+      content: "";
+      width: 10rem;
+      /* 202px - 248px */
+      height: clamp(12.625rem, 25vw, 15.5rem);
+      background: #1a1a1a;
+      opacity: 1;
+      border-radius: 1rem;
+      position: absolute;
+      display: block;
+      /* 16px -20px */
+      /* wrapped in a calc function to get a negative clamp value */
+      bottom: calc(clamp(0.5rem, 2.09vw, 1.25rem) * -1);
+      left: calc(clamp(0.5rem, 2.09vw, 1.25rem) * -1);
+      z-index: -1;
+  }
+  #sbsr-76 .cs-picture img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+      border-radius: 1rem;
+  }
+}
+/* Tablet - 768px */
+@media only screen and (min-width: 48rem) {
+  #sbsr-76 .cs-container {
+      max-width: 80rem;
+      flex-direction: row;
+      justify-content: flex-end;
+      /* 60px - 128px */
+      gap: clamp(3.75rem, 9.5vw, 8rem);
+  }
+  #sbsr-76 .cs-wrapper {
+      /* 328px - 502px */
+      width: clamp(20.5rem, 37.5vw, 31.375rem);
+      /* 440px - 520px */
+      height: clamp(27.5rem, 40vw, 32.5rem);
+      /* 16px - 20px */
+      margin-right: clamp(1rem, 5vw, 1.25rem);
+      /* sends it to the right in the 2nd position */
+      order: 2;
+      flex: none;
+  }
+  #sbsr-76 .cs-picture {
+      margin: 0;
+      height: 100%;
+      flex: none;
+  }
+  #sbsr-76 .cs-content {
+      width: 45%;
+      margin: 0;
+  }
+}
+
+                              
+
+/*-- -------------------------- -->
+<---         Services           -->
+<--- -------------------------- -*/
+
+/* Mobile - 360px */
+@media only screen and (min-width: 0rem) {
+  #services-282 {
+      padding: var(--sectionPadding);
+  }
+  #services-282 .cs-container {
+      width: 100%;
+      /* changes to 1280px on tabelt */
+      max-width: 34.375rem;
+      margin: auto;
+  }
+  #services-282 .cs-container {
+      width: 100%;
+      /* changes to 1280px on tabelt */
+      max-width: 34.375rem;
+      margin: auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      /* 48px - 64px */
+      gap: clamp(3rem, 6vw, 4rem);
+  }
+  #services-282 .cs-content {
+      /* set text align to left if content needs to be left aligned */
+      text-align: left;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      /* centers content horizontally, set to flex-start to left align */
+      align-items: flex-start;
+  }
+
+  #services-282 .cs-card-group {
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
+  }
+  #services-282 .cs-item {
+      list-style: none;
+      width: 100%;
+      /* 32px - 40px */
+      padding: clamp(2rem, 4vw, 2.5rem) 1.75rem;
+      /* prevents padding from affecting width and height */
+      box-sizing: border-box;
+      background-color: #f1f1f4;
+      border-radius: 0.25rem;
+      display: flex;
+      transition: background-color 0.3s;
+  }
+  #services-282 .cs-item:hover {
+      background-color: var(--primary);
+  }
+  #services-282 .cs-item:hover .cs-h3,
+  #services-282 .cs-item:hover .cs-item-text,
+  #services-282 .cs-item:hover .cs-fake-link {
+      color: #fafbfc;
+  }
+  #services-282 .cs-link {
+      text-decoration: none;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+  }
+  #services-282 .cs-h3 {
+      /* 20px - 25px */
+      font-size: clamp(1.25rem, 1.95vw, 1.5625rem);
+      margin: 0;
+      margin-bottom: 1rem;
+      color: var(--headerColor);
+      transition: color 0.3s;
+  }
+  #services-282 .cs-item-text {
+      font-size: 1rem;
+      line-height: 1.5em;
+      margin: 0;
+      margin-bottom: 1.25rem;
+      color: var(--bodyTextColor);
+      transition: color 0.3s;
+  }
+  #services-282 .cs-fake-link {
+      font-size: 1rem;
+      font-weight: 700;
+      /* pushes up against the .cs-item-text so it's always at the bottom of the card */
+      margin-top: auto;
+      color: var(--primary);
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      transition: color 0.3s;
+      position: relative;
+  }
+  #services-282 .cs-fake-link:hover:before {
+      width: 100%;
+  }
+  #services-282 .cs-fake-link:before {
+      /* animated text underline */
+      content: "";
+      width: 0%;
+      height: 2px;
+      /* current color of parent */
+      background: currentColor;
+      opacity: 1;
+      position: absolute;
+      display: block;
+      bottom: -0.125rem;
+      left: 0;
+      transition: width 0.3s;
+  }
+  #services-282 .cs-fake-link svg {
+      margin-left: 0.5rem;
+  }
+  #services-282 .cs-fake-link svg path {
+      /* current color of parent */
+      fill: currentColor;
+  }
+}
+/* In Between - 600px */
+@media only screen and (min-width: 37.5rem) {
+  #services-282 .cs-card-group {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+  }
+  #services-282 .cs-item {
+      width: 38%;
+      align-self: stretch;
+  }
+}
+/* Small Desktop - 1024px */
+@media only screen and (min-width: 48rem) {
+  #services-282 .cs-container {
+      max-width: 80rem;
+  }
+  #services-282 .cs-title {
+      width: 80%;
+      margin-left: 0;
+  }
+  #services-282 .cs-text {
+      width: 80%;
+      margin-left: 0;
+  }
+  #services-282 .cs-item {
+      /* 224px - 413px */
+      width: clamp(14rem, 30.4vw, 25.8125rem);
+      min-height: 16.25rem;
+      /* prevents padding from adding to height and width */
+      box-sizing: border-box;
+  }
+}
+
+                                                             
