--- a/src/_includes/components/cta.html
+++ b/src/_includes/components/cta.html
@@ -14,9 +14,9 @@
     </div>
     <!--Background Image-->
     <picture class="cs-background">
-        <source media="(max-width: 600px)" src="assets/images/laptopwgraphs.jpg">
-        <source media="(min-width: 601px)" src="assets/images/laptopwgraphs.jpg">
-        <img loading="lazy" decoding="async" src="assets/images/laptopwgraphs.jpg" alt="cleaner" width="1920" height="660" aria-hidden="true">
+        <source media="(max-width: 600px)" srcset="/assets/images/laptopwgraphs.jpg">
+        <source media="(min-width: 601px)" srcset="/assets/images/laptopwgraphs.jpg">
+        <img loading="lazy" decoding="async" src="/assets/images/laptopwgraphs.jpg" alt="image of a laptop" width="1920" height="660" aria-hidden="true">
     </picture>
 </section>
                                 
