--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -6,7 +6,7 @@
     <div class="cs-container">
         <div class="cs-top">
             <a aria-label="go back to home" class="cs-logo" href="">
-                <img class="cs-logo-img" loading="lazy" decoding="async" src="assets/svgs/dvwebdevlong.svg" alt="logo" width="50" height="40">
+                <img class="cs-logo-img" loading="lazy" decoding="async" src="/assets/svgs/dvlogo.svg" alt="logo" width="50" height="40">
             </a>
             <ul class="cs-ul">
                 <li class="cs-li">
