--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -79,10 +79,11 @@
     margin-bottom: 2rem;
   }
   #sbs .cs-flex-group {
-    position: relative;
+    position: absolute;
     border-radius: 1rem;
     background-color: #f7f7f7;
     /* 16px - 32px */
+    bottom: 0;
     padding: clamp(1rem, 3vw, 2rem);
   }
   #sbs .cs-flex-p {
@@ -166,4 +167,40 @@
   body.dark-mode #sbs .cs-quote-icon {
     opacity: 0.2;
   }
+}
+.cs-button-4 {
+  text-align: center;
+  font-size: 1rem;
+  /* 46px - 56px */
+  line-height: clamp(2.875rem, 8vw, 3.5rem);
+  text-decoration: none;
+  font-weight: 700;
+  min-width: 10.875rem;
+  margin: 0;
+  overflow: hidden;
+  color: #fff;
+  padding: 0 3rem;
+  /* prevents padding and border from affecting height and width */
+  box-sizing: border-box;
+  background-color: #1a1a1a;
+  display: inline-block;
+  position: relative;
+  z-index: 1;
+}
+.cs-button-4:before {
+  content: '';
+  width: 150%;
+  height: 110%;
+  background: var(--primary);
+  opacity: 1;
+  position: absolute;
+  display: block;
+  top: 50%;
+  left: -130%;
+  z-index: -2;
+  transform: skew(45deg) translateY(-50%);
+  transition: left 0.3s;
+}
+.cs-button-4:hover:before {
+  left: -20%;
 }
