--- a/src/assets/less/about.less
+++ b/src/assets/less/about.less
@@ -91,10 +91,11 @@
         }
 
         .cs-flex-group {
-            position: relative;
+            position: absolute;
             border-radius: (16/16rem);
             background-color: #f7f7f7;
             /* 16px - 32px */
+            bottom: 0;
             padding: clamp(1rem, 3vw, 2rem);
         }
 
@@ -203,3 +204,40 @@
         }
     }
 }
+
+  .cs-button-4 {
+    text-align: center;
+    font-size: 1rem;
+    /* 46px - 56px */
+    line-height: clamp(2.875rem, 8vw, 3.5rem);
+    text-decoration: none;
+    font-weight: 700;
+    min-width: 10.875rem;
+    margin: 0;
+    overflow: hidden;
+    color: #fff;
+    padding: 0 3rem;
+    /* prevents padding and border from affecting height and width */
+    box-sizing: border-box;
+    background-color: #1a1a1a;
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+  }
+  .cs-button-4:before {
+    content: '';
+    width: 150%;
+    height: 110%;
+    background: var(--primary);
+    opacity: 1;
+    position: absolute;
+    display: block;
+    top: 50%;
+    left: -130%;
+    z-index: -2;
+    transform: skew(45deg) translateY(-50%);
+    transition: left .3s;
+  }
+  .cs-button-4:hover:before {
+    left: -20%;
+  }
