--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -85,6 +85,7 @@
     /* 16px - 32px */
     bottom: 0;
     padding: clamp(1rem, 3vw, 2rem);
+    width: 100%;
   }
   #sbs .cs-flex-p {
     margin: 0 0 1rem;
