--- a/src/assets/less/about.less
+++ b/src/assets/less/about.less
@@ -97,6 +97,7 @@
             /* 16px - 32px */
             bottom: 0;
             padding: clamp(1rem, 3vw, 2rem);
+            width: 100%;
         }
 
         .cs-flex-p {
