--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -951,7 +951,7 @@
       display: block;
       height: 100%;
       width: 100%;
-      background: #1a1a1a;
+      background: #010101;
       opacity: 0.8;
       top: 0;
       left: 0;
@@ -1051,9 +1051,9 @@
       width: 31.25rem;
       height: 93.75rem;
       margin-right: -3.125rem;
-      background: -moz-linear-gradient(left, #1a1a1a 0%, #1a1a1a 57%, rgba(26, 26, 26, 0) 100%);
-      background: -webkit-linear-gradient(left, #1a1a1a 0%, #1a1a1a 57%, rgba(26, 26, 26, 0) 100%);
-      background: linear-gradient(to right, #1a1a1a 0%, #1a1a1a 57%, rgba(26, 26, 26, 0) 100%);
+      background: -moz-linear-gradient(left, #010101 0%, #010101 57%, rgba(26, 26, 26, 0) 100%);
+      background: -webkit-linear-gradient(left, #010101 0%, #010101 57%, rgba(26, 26, 26, 0) 100%);
+      background: linear-gradient(to right, #010101 0%, #010101 57%, rgba(26, 26, 26, 0) 100%);
       opacity: 1;
       position: absolute;
       display: block;
@@ -1088,7 +1088,7 @@
   @media only screen and (min-width: 0rem) {
     #footer-1390 {
       padding: var(--sectionPadding);
-      background-color: #fff;
+      background-color: #010101;
       position: relative;
       z-index: 1;
     }
@@ -1105,7 +1105,7 @@
       margin-bottom: 2.5rem;
       /* 24px - 64px */
       padding-bottom: clamp(1.5rem, 5vw, 4rem);
-      border-bottom: 1px solid #4e4b66;
+      border-bottom: 1px solid var(--primary);
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -1133,7 +1133,7 @@
       line-height: 1.5em;
       text-decoration: none;
       margin: 0;
-      color: #4e4b66;
+      color: var(--bodyTextColorWhite);
       display: block;
       transition: color 0.3s;
     }
@@ -1172,7 +1172,7 @@
     #footer-1390 .cs-social-link {
       width: 2rem;
       height: 2rem;
-      background-color: #4e4b66;
+      background-color: var(--primary);
       border-radius: 50%;
       display: flex;
       justify-content: center;
@@ -1204,7 +1204,7 @@
     #footer-1390 .cs-separater {
       font-size: 1rem;
       text-decoration: none;
-      color: #4e4b66;
+      color: var(--primary);
       transition: color 0.3s;
     }
     #footer-1390 .cs-copyright-link:hover,
